--- a/translations/kangyur/placeholders/087-012_toh506,885-the_incantation_of_the_sovereign_practice_of_the_supreme_secret_found_especially_in_the_great_jewel_palace.xml
+++ b/translations/kangyur/placeholders/087-012_toh506,885-the_incantation_of_the_sovereign_practice_of_the_supreme_secret_found_especially_in_the_great_jewel_palace.xml
@@ -6,7 +6,7 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">nor chen rgyas pa'i gzhal med khang shin tu rab tu gnas pa gsang ba dam pa'i gsang ba'i cho ga zhib mo'i rgyal po'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">mahāmaṇivipula­vimānasupratiṣṭhitaguhya­paramarahasyakalparāja­dhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of the Sovereign Practice of the Supreme Secret Found Especially in the Great Jewel Palace</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Sovereign Practice of the Supreme Secret Found Especially in the Great Jewel Palace</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nor bu chen po rgyas pa'i gzhal med khang shin tu rab tu gnas pa gsang ba dam pa'i gsang ba'i cho ga zhib mo'i rgyal po zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmaṇivipula­vimānasupratiṣṭhita­guhyaparamarahasyakalpa­rājānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">nor chen po rgyas pa'i gzhal med khang shin tu gnas pa gsang ba dam pa'i gsang ba'i cho ga zhib mo'i gzungs/</title>
@@ -14,16 +14,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nor bu chen po rgyas pa'i gzhal med khang shin tu rab tu gnas pa gsang ba dam pa'i gsang ba'i cho ga zhib mo'i rgyal po zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmaṇivipulavimāna­supratiṣṭhitaguhya­paramarahasyakalparāja­nāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-087-012"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh506" type="text">
                     <ref>Toh 506</ref>
                     <biblScope>vol.87, ff.286v-309r(pp.573-617)</biblScope>
-                    <location count-pages="46">
-                        <start volume="87" page="574"/>
-                        <end volume="87" page="619"/>
+                    <location work="UT4CZ5369" count-pages="46">
+                        <volume number="87" start-page="572" end-page="617"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12227" work="W22084"/>
@@ -31,16 +35,17 @@
                 <bibl key="toh885" type="text">
                     <ref>Toh 885</ref>
                     <biblScope>vol.100, ff.135v-159v(pp.270-318)</biblScope>
-                    <location count-pages="49">
-                        <start volume="100" page="272"/>
-                        <end volume="100" page="320"/>
+                    <location work="UT4CZ5369" count-pages="49">
+                        <volume number="100" start-page="270" end-page="318"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12647" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:23 by admin</note>
+                <note type="lastUpdated" date-time="2022-09-01T09:12:55.538Z" user="admin">01/09/2022 09:12:55</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-09-01T09:12:47.789Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-09-01T09:12:47.789Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
