--- a/translations/kangyur/placeholders/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
+++ b/translations/kangyur/placeholders/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
@@ -4,19 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems sor thar chos bzhi sgrub pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bodhisattvapratimokṣa­catuṣkanirhārasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on How to Establish the Four Features of Bodhisattvas’ Individual Liberation</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa'i so sor thar pa chos bzhi sgrub pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bodhisattvapratimokṣa­catuṣkanirhārasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems sor thar chos bzhi sgrub pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">bodhisattvapratimokṣa­catuṣkanirhāra­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-66">Joseph Mark McClellan</author>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-                <editor role="reviser" ref="contributors.xml#person-59">Benjamin Collet-Cassart</editor>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
+                <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa'i so sor thar pa chos bzhi sgrub pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-66">Joseph Mark McClellan</author>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <editor role="reviser" ref="eft:person-59">Benjamin Collet-Cassart</editor>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -35,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-01T15:37:52.138Z" user="admin">01/09/2022 15:37:52</note>
+                <note type="lastUpdated" date-time="2022-09-01T15:38:33.468Z" user="admin">01/09/2022 15:38:33</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:06:19.772Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:20:56.718Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:20:56.718Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -43,6 +44,7 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-04T12:21:49.642Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-09-01T15:37:43.857Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-01T15:37:43.857Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-01T15:38:25.334Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
