--- a/translations/kangyur/placeholders/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
+++ b/translations/kangyur/placeholders/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
@@ -13,9 +13,10 @@
                 <author role="translatorEng" ref="eft:person-383">Adam T. Miller</author>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2022</date>
+                <edition>v 0.0.11 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.c">
@@ -36,7 +37,25 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-29T13:24:27.432Z" user="admin">29/08/2022 13:24:27</note>    <note type="updated" update="translation-status" value="4" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-02-15T13:26:04.633Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-02-15T13:26:04.633Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-02-15T13:27:06.91Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-02-15T13:27:06.91Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-15T13:27:36.879Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-02-15T13:27:54.218Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-28T10:15:35.509Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-28T10:15:35.509Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-05-18T11:47:59.562Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-18T11:47:59.562Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-05-18T11:48:40.855Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-05-20T08:38:54.737Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-20T08:38:54.737Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.c" date-time="2022-08-29T13:24:19.211Z" user="line-tofte">2.c</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-29T13:24:19.211Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-09-01T15:40:42.567Z" user="admin">01/09/2022 15:40:42</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-02-15T13:26:04.633Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-02-15T13:26:04.633Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-02-15T13:27:06.91Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-02-15T13:27:06.91Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-15T13:27:36.879Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-02-15T13:27:54.218Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-04-28T10:15:35.509Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-28T10:15:35.509Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-05-18T11:47:59.562Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-18T11:47:59.562Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-05-18T11:48:40.855Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-05-20T08:38:54.737Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-20T08:38:54.737Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2022-08-29T13:24:19.211Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-29T13:24:19.211Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-09-01T15:40:34.461Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
