--- a/translations/kangyur/placeholders/089-002_toh545,892-the_incantation_that_which_was_spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/placeholders/089-002_toh545,892-the_incantation_that_which_was_spoken_by_manjusri_himself.xml
@@ -19,10 +19,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-089-002"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-11T08:22:54.132Z" user="admin">11/05/2022 08:22:54</note>
+                <note type="lastUpdated" date-time="2022-09-15T08:44:50.116Z" user="admin">15/09/2022 08:44:50</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto (update-contributors)</note>
@@ -62,6 +62,8 @@
     <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-04T11:32:40.281Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:22:46.595Z" user="line-tofte">2.f</note>
     <note type="updated" update="text-version" value="0.0.9" date-time="2022-05-11T08:22:46.595Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:44:42.081Z" user="line-tofte">2.e</note>
+    <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-15T08:44:42.081Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
